kubernetes/apps/otel-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo
  namespace: otel-demo
  annotations:
    cert-manager.io/cluster-issuer: internal-ca-issuer
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - otel-demo.home.local
      secretName: otel-demo-tls
  rules:
    - host: otel-demo.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-demo-frontendproxy
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: internal-ca-issuer
spec:
  ingressClassName: cilium          # falls deine Cilium-IngressClass anders heißt, hier anpassen
  tls:
  - hosts:
    - headlamp.home.local
    secretName: headlamp-tls
  rules:
  - host: headlamp.home.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
